<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.mobilemakers.wildkingdom.GoldenLionTamarinFragment"
    android:orientation="vertical">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/txt_title_golden_lion_tamarin"
        android:id="@+id/Title"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/text_title_color" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/golden_lion_tamarin"
        android:layout_gravity="center_horizontal"
        android:paddingTop="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txt_title_habitat"
        android:id="@+id/txt_title_habitat"
        android:paddingTop="8dp"
        android:textColor="@color/abc_background_cache_hint_selector_material_dark"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txt_habitat"
        android:id="@+id/txt_habitat"
        android:textColor="@color/abc_background_cache_hint_selector_material_dark"
        android:textSize="@dimen/txt_description_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txt_title_description"
        android:id="@+id/txt_title_description"
        android:paddingTop="8dp"
        android:textColor="@color/abc_background_cache_hint_selector_material_dark"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_description_golden_lion_tamarin"
        android:id="@+id/txt_description"
        android:textSize="@dimen/txt_description_size" />

</LinearLayout>
